--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,3 @@
-body {
-  background-color: coral;
-
-  div {
-    background-color: orange;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
